--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "mod-4-proj",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "install": "npm --prefix backend install backend",
+    "dev:backend": "npm install --prefix backend start",
+    "sequelize": "npm run --prefix backend sequelize",
+    "sequelize-cli": "npm run --prefix backend sequelize-cli",
+    "start": "npm start --prefix backend",
+    "build": "npm run --prefix backend build"
   },
   "repository": {
     "type": "git",
@@ -16,5 +20,6 @@
   "bugs": {
     "url": "https://github.com/ChristianBGabbard/API-project/issues"
   },
-  "homepage": "https://github.com/ChristianBGabbard/API-project#readme"
+  "homepage": "https://github.com/ChristianBGabbard/API-project#readme",
+  "description": ""
 }
