--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "sequelize": "sequelize",
     "sequelize-cli": "sequelize-cli",
     "start": "per-env",
@@ -22,7 +22,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "express-validator": "^7.0.1",
+    "express-validator": "^6.15.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
@@ -33,8 +33,7 @@
   },
   "devDependencies": {
     "dotenv-cli": "^7.2.1",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "sqlite3": "^5.1.6"
-  },
-  "description": ""
+  }
 }
