--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "mod-4-proj",
+  "name": "lodgingexpressapi",
   "version": "1.0.0",
+  "description": "## Database Schema Design",
   "main": "index.js",
+  "dependencies": {
+    "express-validator": "^7.0.1",
+    "validator": "^13.9.0",
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {},
   "scripts": {
-    "install": "npm --prefix backend install backend",
+    "render-postbuild": "npm run build --prefix frontend",
+    "install": "npm --prefix backend install backend && npm --prefix frontend install frontend",
     "dev:backend": "npm install --prefix backend start",
+    "dev:frontend": "npm install --prefix frontend start",
     "sequelize": "npm run --prefix backend sequelize",
     "sequelize-cli": "npm run --prefix backend sequelize-cli",
     "start": "npm start --prefix backend",
-    "build": "npm run --prefix backend build"
+    "build": "npm run build --prefix backend"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ChristianBGabbard/API-project.git"
+    "url": "git+https://github.com/sboyle05/LodgingExpress.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ChristianBGabbard/API-project/issues"
+    "url": "https://github.com/sboyle05/LodgingExpress/issues"
   },
-  "homepage": "https://github.com/ChristianBGabbard/API-project#readme",
-  "description": ""
+  "homepage": "https://github.com/sboyle05/LodgingExpress#readme"
 }
